@@ -16,7 +16,7 @@
  * along with this program; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
  *
- * $Id: dbd_mysql.c,v 1.2 2005/08/16 21:45:12 shiro Exp $
+ * $Id: dbd_mysql.c,v 1.3 2005/09/10 11:52:15 shiro Exp $
  */
 
 #include "dbd_mysql.h"
@@ -29,16 +29,25 @@
 ScmClass *MysqlHandleClass;
 ScmClass *MysqlResClass;
 
+/* Symbol 'closed? */
+static ScmObj sym_closed;
+
 static void mysql_cleanup(ScmObj obj)
 {
-    MYSQL *s = MYSQL_HANDLE_UNBOX(obj);
-    mysql_close(s);
+    if (!SCM_FALSEP(Scm_ForeignPointerAttrGet(SCM_FOREIGN_POINTER(obj),
+                                              sym_closed, SCM_FALSE))) {
+        MYSQL *s = MYSQL_HANDLE_UNBOX(obj);
+        mysql_close(s);
+    }
 }
 
 static void mysql_res_cleanup(ScmObj obj)
 {
-    MYSQL_RES *r = MYSQL_RES_UNBOX(obj);
-    mysql_free_result(r);
+    if (!SCM_FALSEP(Scm_ForeignPointerAttrGet(SCM_FOREIGN_POINTER(obj),
+                                              sym_closed, SCM_FALSE))) {
+        MYSQL_RES *r = MYSQL_RES_UNBOX(obj);
+        mysql_free_result(r);
+    }
 }
 
 /*
@@ -106,6 +115,9 @@ ScmObj Scm_Init_dbd_mysql(void)
     MysqlResClass =
         Scm_MakeForeignPointerClass(mod, "<mysql-res>",
                                     NULL, mysql_res_cleanup, 0);
+
+    /* Get handle of the symbol 'closed? */
+    sym_closed = SCM_INTERN("closed?");
 
     /* Register stub-generated procedures */
     Scm_Init_dbd_mysqllib(mod);
